workspace-sf/force-app/main/default/objects/Mensagem__mdt/Mensagem__mdt.object-meta.xml
<CustomObject>
    <label>Mensagem</label>
    <pluralLabel>Mensagens</pluralLabel>
</CustomObject>