workspace-sf/force-app/main/default/objects/Mensagem__mdt/fields/AreaResponsavel__c.field-meta.xml
<CustomField>
    <fullName>AreaResponsavel__c</fullName>
    <label>Área responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>