workspace-sf/force-app/main/default/objects/Mensagem__mdt/fields/Evento__c.field-meta.xml
<CustomField>
    <fullName>Evento__c</fullName>
    <label>Evento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abertura de sinistro</fullName>
            </value>
            <value>
                <fullName>Emissão</fullName>
            </value>
            <value>
                <fullName>Endosso</fullName>
            </value>
            <value>
                <fullName>Liquidação</fullName>
            </value>
            <value>
                <fullName>Reabertura de sinistro</fullName>
            </value>
            <value>
                <fullName>Reativação</fullName>
            </value>
            <value>
                <fullName>Reemissão</fullName>
            </value>
            <value>
                <fullName>Renovação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>