workspace-sf/force-app/main/default/objects/Mensagem__mdt/fields/MeioComercializacao__c.field-meta.xml
<CustomField>
    <fullName>MeioComercializacao__c</fullName>
    <label>Meio de comercialização</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
                <default>true</default>
                <label>Portal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>