workspace-sf/force-app/main/default/objects/Mensagem__mdt/fields/Momento_do_processo__c.field-meta.xml
<CustomField>
    <fullName>Momento_do_processo__c</fullName>
    <label>Momento do processo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contratação</fullName>
                <default>true</default>
                <label>Contratação</label>
            </value>
            <value>
                <fullName>Gestão do ciclo de vida</fullName>
            </value>
            <value>
                <fullName>Oferta</fullName>
            </value>
            <value>
                <fullName>Sinistro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>