workspace-sf/force-app/main/default/objects/Mensagem__mdt/fields/NivelAlcada__c.field-meta.xml
<CustomField>
    <fullName>NivelAlcada__c</fullName>
    <label>Nível de alçada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>