workspace-sf/force-app/main/default/objects/Mensagem__mdt/fields/TextoMensagem__c.field-meta.xml
<CustomField>
    <fullName>TextoMensagem__c</fullName>
    <label>Texto da mensagem</label>
    <type>TextArea</type>
</CustomField>