workspace-sf/force-app/main/default/objects/Mensagem__mdt/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alerta</fullName>
                <default>true</default>
                <label>Alerta</label>
            </value>
            <value>
                <fullName>Crítica</fullName>
            </value>
            <value>
                <fullName>Desvio</fullName>
            </value>
            <value>
                <fullName>Recusa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>