workspace-sf/force-app/main/default/objects/Mensagem__mdt/listViews/Tudo.listView-meta.xml
<ListView>
    <fullName>Tudo</fullName>
    <columns>MasterLabel</columns>
    <columns>Codigo__c</columns>
    <columns>Tipo__c</columns>
    <columns>AreaResponsavel__c</columns>
    <columns>Evento__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>